--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@ window.applicationCache.oncached = window.applicationCache.onupdateready = funct
     </div>
     <div id="progress"></div>
 
-<a href="payload.html#p0=mira/mira.js&p1=mira/mira2.js">JB+MIRA</a>
-<a href="payload.html#p0=mira/mira.js&p1=672_goldhen11.js">JB+GOLDHEN V1.1</a>
-<a href="payload.html#p0=mira/mira.js&p1=linux/1gb.js">JB+LINUX (VRAM 1GB)</a>
-<a href="payload.html#p0=mira/mira.js&p1=linux/3gb.js">JB+LINUX (VRAM 3GB)</a>
-<a href="payload.html#p0=mira/mira.js&p1=ftp.js">JB+FTP</a>
-<a href="payload.html#p0=mira/mira.js&p1=fakeusb.js">JB+FAKEUSB</a>
-<a href="payload.html">JB+NETCAT (LEGACY)</a>
-<a href="payload.html#p0=mira/mira.js">JB+NETCAT</a>
+<button><a href="payload.html#p0=mira/mira.js&p1=mira/mira2.js">JB+MIRA</a></button>
+<button><a href="payload.html#p0=mira/mira.js&p1=672_goldhen11.js">JB+GOLDHEN V1.1</a></button>
+<button><a href="payload.html#p0=mira/mira.js&p1=linux/1gb.js">JB+LINUX (VRAM 1GB)</a></button>
+<button><a href="payload.html#p0=mira/mira.js&p1=linux/3gb.js">JB+LINUX (VRAM 3GB)</a></button>
+<button><a href="payload.html#p0=mira/mira.js&p1=ftp.js">JB+FTP</a></button>
+<button><a href="payload.html#p0=mira/mira.js&p1=fakeusb.js">JB+FAKEUSB</a></button>
+<button><a href="payload.html">JB+NETCAT (LEGACY)</a></button>
+<button><a href="payload.html#p0=mira/mira.js">JB+NETCAT</a></button>
 </body>
 
 </html>
