--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ window.applicationCache.oncached = window.applicationCache.onupdateready = funct
     <div id="progress"></div>
 
 <button><a href="payload.html#p0=mira/mira.js&p1=mira/mira2.js">JB+MIRA</a></button>
-<button><a href="payload.html#p0=mira/mira.js&p1=672_goldhen11.js">JB+GOLDHEN V1.1</a></button>
+<button><a href="payload.html#p0=mira/mira.js&p1=goldhen_2.2.2_672.js">JB+GOLDHEN V2.2.2</a></button>
 <button><a href="payload.html#p0=mira/mira.js&p1=linux/1gb.js">JB+LINUX (VRAM 1GB)</a></button>
 <button><a href="payload.html#p0=mira/mira.js&p1=linux/3gb.js">JB+LINUX (VRAM 3GB)</a></button>
 <button><a href="payload.html#p0=mira/mira.js&p1=ftp.js">JB+FTP</a></button>
